x synonym, routine and string dumping

--- a/zmach.html
+++ b/zmach.html
@@ -16,6 +16,9 @@
   </head>
   <body>
     <div>
+      <div class="debug">
+        <input id="dump_routines" type="button" value="Dump routines">
+      </div>
       <div id="mainscreen">
       </div>
     </div>
