--- a/zmach.html
+++ b/zmach.html
@@ -17,7 +17,10 @@
   <body>
     <div>
       <div class="debug">
-        <input id="dump_routines" type="button" value="Dump routines">
+        <div>
+          <input id="dump_routines" type="button" value="Dump routines">
+        </div>
+        <div id="debug_messages"></div>
       </div>
       <div id="mainscreen">
       </div>
